[package]
name = "rasterh3"
version = "0.10.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "Convert raster data to H3 cells"
edition = "2021"
license = "MIT"
keywords = ["geo", "spatial", "h3", "ndarray"]
readme = "README.md"
repository = "https://github.com/nmandery/rasterh3.git"
homepage = "https://github.com/nmandery/rasterh3"

[features]
rayon = ["dep:rayon", "ndarray/rayon"]

[dependencies]
ahash = "0.8"
geo = "0.30"
geo-types = "^0.7"
h3o = { version = "0.8", features = ["geo"] }
ndarray = { version = "^0.16", features = [] }
rayon = { version = "^1", optional = true }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
approx = "^0.5"
criterion = { version = "^0.6", features = ["html_reports"] }
env_logger = "^0.11"
# With this PR: https://github.com/georust/gdal/pull/569
gdal = { version = "0.18", features = [
    "array",
] }
ordered-float = "5"

[[bench]]
name = "convert_dataset_r"
harness = false
